[REFACTO] Animal [ADD] animalsHistory to zooGameDetails